--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,27 +1,28 @@
 on:
   push:
     tags:
-    - '*'
+      - "*"
 
 jobs:
   publish:
     name: Publish release
     runs-on: ubuntu-latest
     steps:
-    - name: Initialize Java
-      uses: actions/setup-java@v1
-      with:
-        java-version: 16
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        submodules: recursive
-    - name: Publish release
-      uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: publish --no-daemon
-      env:
-        SIGNING_PGP_KEY: ${{ secrets.SIGNING_PGP_KEY }}
-        SIGNING_PGP_PASSWORD: ${{ secrets.SIGNING_PGP_PASSWORD }}
-        GITHUB_ACTOR: ${{ github.actor }}
-        GITHUB_TOKEN: ${{ github.token }}
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Publish release
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: publish --no-daemon
+        env:
+          SIGNING_PGP_KEY: ${{ secrets.SIGNING_PGP_KEY }}
+          SIGNING_PGP_PASSWORD: ${{ secrets.SIGNING_PGP_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
